gcc/testsuite/rust/rustc/ui/suggestions/issue-94171.rs
fn L(]{match
(; {`
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } }

